# tree-sitter-m1

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  STATUS.md  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  release.yml
after/ftplugin/: m1scr.lua
bindings/rust/: build.rs  lib.rs
docs/superpowers/plans/: 2026-05-31-tree-sitter-m1-v2.md
docs/superpowers/specs/: 2026-05-31-tree-sitter-m1-v2-design.md
editors/nvim/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  parse_edit.rs
fuzz/seeds/parse/: 0a413511edb85587  0b8bf86283f73d32  15e61528b8cc1e26  6731939b61a21672  7c803ed815190f71  94ed3f9a571ce125  9e94425c011e4639  a83027830affff95  b3b5d4a1e0df7866  b5cdc00488c78bb1  c0c5c0af8bcf87bd  c9bf9211cc480477  d59e437102aa2f10  d71b8e27beaaf5e3  dc65ebe14ee2afa7  de4ce2238ac1f0b3  e3fe8aa85d7c3b19  ead678e1c0d46a99  f04db9b8bd27356b
lua/m1scr/: init.lua
plugin/: m1scr.lua
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  textobjects.scm
queries/m1scr/: folds.scm  highlights.scm  indents.scm
scripts/: check-corpus.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: constructs.txt  errors.txt  interpolation.txt  literals.txt  scanner_edges.txt
