[package]
name = "tree-sitter-m1"
version = "0.2.0"
edition = "2024"
description = "M1 (MoTeC M1 script) grammar for tree-sitter"
publish = false
build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1"
